<resources>
    <string name="app_name">Music Player</string>
    <string name="no_songs_found">NO SONGS FOUND</string>
    <string name="songs">SONGS</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="title_of_the_song">Title of the song</string>
    <string name="_0_00">0:00</string>
    <string name="_0_000">0:00</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo7">TODO</string>
</resources>