<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_drawer"
    tools:context=".MusicPlayerActivity">

    <TextView
        android:id="@+id/song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:ellipsize="marquee"
        android:padding="20dp"
        android:singleLine="true"
        android:text="@string/title_of_the_song"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/music_icon_big"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_above="@id/controls"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:src="@drawable/disk2"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/controls"
        android:padding="40dp">

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white" />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_bar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/_0_000"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_bar"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/_0_00"
            android:textColor="#FFFFFF" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_time"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_skip_previous_24"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:id="@+id/previous"
                android:contentDescription="@string/todo4" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_skip_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/next"
                android:contentDescription="@string/todo3" />

            <ImageView
                android:id="@+id/pause_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/todo2"
                android:src="@drawable/ic_baseline_pause_circle_outline_24" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>